# peapods

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  benchmark.py  clusters.py  example.py  index.html  lattices.py  lychee.toml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  spin_models.py  sweep.toml  sweep_cmr3.toml  sweeps.py  tutorial.ipynb  utils.py
.github/workflows/: ci.yml  docs.yml  (+1 more)
api/: index.html
benchmarks/: sweep_modes.py
docs/: api.md  figure_generator.py  index.md
examples/: energy_vs_temperature.py  overlap_csd.py  sweep_config.toml
paper/: .gitignore
plot/: cluster_snapshots.py
search/: search_index.json
spin-sim/: Cargo.toml  README.md
spin-sim/examples/: bench.rs
spin-sim/src/: clusters.rs  config.rs  lattice.rs  lib.rs  parallel.rs  results.rs  simulation.rs
spin-sim/src/clusters/: fk.rs  mod.rs  overlap.rs  utils.rs
spin-sim/src/geometry/: lattice.rs  mod.rs  offsets.rs
spin-sim/src/mcmc/: mod.rs  sweep.rs  tempering.rs
spin-sim/src/simulation/: mod.rs  realization.rs
spin-sim/src/spins/: energy.rs  mod.rs
spin-sim/src/statistics/: autocorrelation.rs  equilibration.rs  mod.rs  overlap.rs  results.rs
src/: clusters.rs  energy.rs  lib.rs  parallel.rs  stats.rs  sweep.rs
tests/: autocorrelation_scaling.py  binder_crossing.py  binder_crossings.py  overlap_histogram.py  plot_utils.py  sg_binder_crossing.py  spin_glass_crossings.py  test_sampling_interfaces.py  triangular_binder_crossing.py  utils.py
(+6 files in other folders)
