[workspace]
members = ["spin-sim"]

[package]
name = "peapods"
version = "0.1.5"
edition = "2021"
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
spin-sim = { path = "spin-sim", version = "0.1.5" }
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
indicatif = "0.17"
ctrlc = "3"

[profile.bench]
inherits = "release"
debug = true
