[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "peapods"
version = "0.1.7"
description = "Ising Monte Carlo: Metropolis, Gibbs, Wolff, Swendsen-Wang, parallel tempering, Houdayer ICM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.scripts]
peapods = "peapods.cli:main"

[tool.maturin]
python-source = "python"
module-name = "peapods._core"
features = ["pyo3/extension-module"]
